--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,30 +1,27 @@
-/*
 body {
-    background: #323232;
-    font-size: 16px;
+    background: #222;
+    background-image: url("../Img/imgback4.jpg");
+    background-size: cover;
+    font-size: 12px;
     font-family: "Open Sans", Arial, Sans-serif;
 }
-*/
+
 /* ----- ----- HEADER ----- ----- */
-header .logo {
-    padding-bottom: 1.25em;
+header {
+    background: url('../img/banner2.jpg') #49a3d6;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 400px;
+    width: auto;
 }
+
 
 header .logo img {
     height: 80px;
 }
 
-header .logo a {
-    display: inline-block;
-}
-
-header .redes-sociales {
-    text-align: right;
-    line-height: 5em;
-}
-
 header .redes-sociales a {
-    border-radius: 50%;
+    border-radius: 40%;
     width: 2.5em;
     height: 2.5em;
     text-align: center;
@@ -32,7 +29,7 @@ header .redes-sociales a {
     display: inline-block;
     background: #aaa;
     color: #fff;
-    margin-left: 1.25em;
+
 }
 
 header .redes-sociales a.instagram {
@@ -49,4 +46,165 @@ header .redes-sociales a.twitter {
 
 header .redes-sociales a:hover {
     background: #222;
+}
+
+header .btn {
+    width: 100px;
+
+}
+
+.main .foto {
+    margin-top: -60px;
+}
+
+.crud a {
+    border-radius: 40%;
+    width: 2.5em;
+    height: 2.5em;
+    text-align: center;
+    line-height: 2.5em;
+    display: inline-block;
+    color: #fff;
+}
+
+.crud a:Hover {
+    background: #ddd;
+    color: #222;
+}
+
+.expe .caja,
+.educa .caja,
+.skills .caja,
+.desar .caja {
+
+    background: rgba(100, 100, 100, 0.2);
+    border-radius: 15px;
+    color: #aaa;
+}
+
+.expe .caja .tit,
+.educa .caja .tit,
+.skills .caja .tit,
+.desar .caja .tit {
+    padding: 10px;
+
+}
+
+.descrip {
+    font-size: 1.1em;
+    font-weight: bolder;
+    color: #777;
+}
+
+.skills .unskill {
+    width: 160px;
+    height: 160px;
+    position: relative;
+}
+
+.skills .unskill .outer {
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    padding: 20px;
+    box-shadow: 6px 6px 10px -1px rgba(255, 255, 255, 0.2),
+        -6px -6px 10px -1px rgba(0, 0, 0, 0.9);
+}
+
+.skills .unskill .inner {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: inset 4px 4px 6px -1px rgba(255, 255, 255, 0.3),
+        inset -4px -4px 4px -1px rgba(0, 0, 0, 0.9);
+}
+
+#nivel {
+    font-size: medium;
+    font-weight: 500;
+    color: #ccc;
+}
+
+circle {
+    fill: none;
+    stroke: url(#GradientColor);
+    stroke-width: 20px;
+    stroke-dasharray: 472;
+    stroke-dashoffset: 472;
+    animation: anim 2s linear forwards;
+}
+
+svg {
+    position: absolute;
+    top: 0;    
+}
+
+@keyframes anim {
+    100% {
+        stroke-dashoffset: 165;
+    }
+}
+
+.caja .post {
+    margin-bottom: 1.875em;
+}
+
+.caja .post .contenedor {
+    background: #dde;
+    -webkit-box-shadow: 0px 0px 15px 3px rgba(255, 255, 255, 0.7);
+    box-shadow: 0px 0px 15px 3px rgba(255, 255, 255, 0.7);
+    margin: 20px;
+}
+
+.caja .post .contenedor .thumber img {
+    vertical-align: top;
+    padding: 20px;
+    height: auto;
+}
+
+.caja .post .contenedor .info {
+    padding: 1.25em;
+}
+
+.caja .post .info .titulo {
+    line-height: 1.125em;
+    margin-bottom: 1.25em;
+    font-size: 1.125em;
+}
+
+.caja .post .info .titulo a {
+    color: #3b3b3b;
+}
+
+.caja .post .info .extracto {
+    color: #292929;
+    font-size: 1em;
+    height: 8.125em;
+    max-height: 8.125em;
+    line-height: 1.75em;
+    margin-bottom: 1.25em;
+    overflow: hidden;
+}
+
+.caja .post .info .categorias ul {
+    list-style: none;
+}
+
+.caja .post .info .categorias ul li {
+    display: inline-block;
+}
+
+.caja .post .info .categorias a {
+    color: #909090;
+    font-size: 1em;
+    font-weight: bold;
+    margin-right: 1.25em;
+}
+
+.caja .post .info .categorias a:hover {
+    color: #5f6ad4;
+    text-decoration: none;
 }
