--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,94 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background: #222;
+    background-image: url("./assets/Img/imgback4.jpg");
+    background-size: cover;
+    font-size: 12px;
+    font-family: "Open Sans", Arial, Sans-serif;
+}
+
+/* ----- ----- HEADER ----- ----- */
+header {
+    background: url('./assets/Img/banner2.jpg') #49a3d6;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 400px;
+    width: auto;
+}
+
+
+header .logo img {
+    height: 80px;
+}
+
+header .redes-sociales a {
+    border-radius: 40%;
+    width: 2.5em;
+    height: 2.5em;
+    text-align: center;
+    line-height: 2.5em;
+    display: inline-block;
+    background: #aaa;
+    color: #fff;
+
+}
+
+header .redes-sociales a.instagram {
+    background: #c05554;
+}
+
+header .redes-sociales a.github {
+    background: #554488;
+}
+
+header .redes-sociales a.twitter {
+    background: #1da1f2;
+}
+
+header .redes-sociales a:hover {
+    background: #222;
+}
+
+header .btn {
+    width: 100px;
+
+}
+
+.main .foto {
+    margin-top: -60px;
+}
+
+.main .foto img {
+    border-radius: 20%;
+    vertical-align: top;
+    border: 5px solid rgba(48, 113, 189, 0.4);
+}
+
+.expe .caja,
+.educa .caja,
+.skills .caja,
+.desar .caja {
+
+    background: rgba(100, 100, 100, 0.2);
+    border-radius: 15px;
+    color: #aaa;
+    margin-top: 50px;
+    padding: 25px 50px;
+    box-shadow: 0px 0px 15px 15px rgba(60, 60, 60, 0.2);
+}
+
+.expe .caja .tit,
+.educa .caja .tit,
+.skills .caja .tit,
+.desar .caja .tit {
+    padding: 10px;
+}
+
+li {
+    list-style: none;
+}
+
+.descrip {
+    font-size: 1.1em;
+    font-weight: bolder;
+    color: #777;
+}
