--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -5,12 +5,14 @@
                 <div class="col-11 tit">
                     <H4>Educación</H4>
                 </div>
-
+             
                 <div class="col-1 align-self-center text-center crud">
                     <a (click)="agregarElemento()"><i class="bi bi-plus-square"></i></a>
                 </div>
+                <app-triple-tx-form *ngIf="addFormu" (resultadoEvent)="editItemFin($event)" [textos]="textosEditar"></app-triple-tx-form>   
                 <li *ngFor="let educacion of mieducacion; let indice=index">
                     <div class="row">
+                        <app-triple-tx-form *ngIf="editFormu && indiceEdit==indice" (resultadoEvent)="editItemFin($event)" [textos]="textosEditar"></app-triple-tx-form>    
                         <div class="col-9">
                             <p class="h5 mt-3">{{educacion.titulo}}</p>
                             <p class="h6">{{educacion.anios}}</p>
@@ -18,12 +20,16 @@
                             <hr>
                         </div>
                         <div class="col-3 align-self-center text-end crud" >
-                            <a (click)="mostrarIndice(indice)"><i class="bi bi-pencil"></i></a>
+                            <a (click)="editarElemento(indice)"><i class="bi bi-pencil"></i></a>
                             <a (click)="borrarElemento(indice)"><i class="bi bi-trash3"></i></a>
-                        </div>
-                    </div>
+                        </div>                       
+                    </div>              
+                  
                 </li>
+             
+              
             </div>
         </div>
+      
     </section>
     <!--*ngIf="datosPorfolio.estaLogeado"-->
