--- a/src/styles.css
+++ b/src/styles.css
@@ -76,6 +76,19 @@ header .btn {
     box-shadow: 0px 0px 15px 15px rgba(60, 60, 60, 0.2);
 }
 
+
+.formu {
+    border-radius: 15px;
+    color: #aaa;
+     
+}
+.textEntry{
+    background: #222;
+    color: #aaa;
+    border-radius: 5px;;
+    padding: 5px;
+}
+
 .expe .caja .tit,
 .educa .caja .tit,
 .skills .caja .tit,
