Conectado mi perfil al BackEnd

--- a/src/app/componentes/acerca/acerca.component.html
+++ b/src/app/componentes/acerca/acerca.component.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <H1 class="H2 text-white mt-3" style="--bs-text-opacity: .8">Ruben Peña</H1>
+                        <H1 class="H2 text-white mt-3" style="--bs-text-opacity: .8">{{misDatos.nombre}} {{misDatos.apellido}}</H1>
                     </div>
                 </div>
                 <H4 class="H4 text-white mt-3" style="--bs-text-opacity: .8">Desarrollador web full stack Junior</H4>
