Agrgado el routing y la pantalla de login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,2 @@
 
-<!--------------------- #Encabezado -------------------------->
-<app-encabezado></app-encabezado>
-<!--------------------- #Acerca -------------------------->
-<app-acerca></app-acerca>
-<!------------------------- #Experiencia -------------------->
-<app-experiencia></app-experiencia>
-<!------------------------- #Educación -------------------->
-<app-educacion></app-educacion>
-
-<!-------------------------- skills------------------------------------->
-<app-skills></app-skills>
-<!---------------------- #Desarrollos ----------------------------------->
-<app-desarrollos></app-desarrollos>
+ <router-outlet></router-outlet>
