--- a/src/app/componentes/acerca/acerca.component.html
+++ b/src/app/componentes/acerca/acerca.component.html
@@ -24,7 +24,7 @@
               
                 
             </div>
-            <div class="col-3 align-self-center text-end crud">
+            <div class="col-3 align-self-center text-end crud" *ngIf="verBt">
                 <a href="#"><i class="bi bi-pencil"></i></a>
                 <a href="#"><i class="bi bi-trash3"></i></a>
             </div>
