--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -5,7 +5,7 @@
                 <H4>Experiencia</H4>
             </div>
 
-            <div class="col-1 align-self-center text-center crud">
+            <div class="col-1 align-self-center text-center crud" *ngIf="verBt"  >
                 <a (click)="agregarElemento()"><i class="bi bi-plus-square"></i></a>
             </div>
             <li *ngFor="let experiencia of miExperiencia; let indice=index">
@@ -16,7 +16,7 @@
                         <p class="descrip">{{experiencia.puesto}}</p>
                         <hr>
                     </div>
-                    <div class="crud col-3 align-self-center text-end " >
+                    <div class="crud col-3 align-self-center text-end "*ngIf="verBt"  >
                         <a (click)="mostrarElemento(indice)"><i class="bi bi-pencil"></i></a>
                         <a (click)="borrarElemento(indice)"><i class="bi bi-trash3"></i></a>
                     </div>
