--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -27,7 +27,7 @@
                   </div>
 
                   <div class="text-center pt-1 mb-5 pb-1">
-                    <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button">Login</button>
+                    <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button" (click)="logeo()">Login</button>
                   </div>                
 
                 </form>
