--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -10,13 +10,13 @@
                     <a (click)="agregarElemento()"><i class="bi bi-plus-square"></i></a>
                 </div>
                 <app-triple-tx-form *ngIf="addFormu" (resultadoEvent)="editItemFin($event)" [textos]="textosEditar"></app-triple-tx-form>   
-                <li *ngFor="let educacion of mieducacion; let indice=index">
+                <li *ngFor="let educacion of misEduca; let indice=index">
                     <div class="row">
                         <app-triple-tx-form *ngIf="editFormu && indiceEdit==indice" (resultadoEvent)="editItemFin($event)" [textos]="textosEditar"></app-triple-tx-form>    
                         <div class="col-9">
                             <p class="h5 mt-3">{{educacion.titulo}}</p>
                             <p class="h6">{{educacion.anios}}</p>
-                            <p class="descrip">{{educacion.descripcion}}</p>
+                            <p class="descrip">{{educacion.titulo}}</p>
                             <hr>
                         </div>
                         <div class="col-3 align-self-center text-end crud" *ngIf="verBt"   >
