--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -16,7 +16,7 @@
                         <div class="col-9">
                             <p class="h5 mt-3">{{educacion.titulo}}</p>
                             <p class="h6">{{educacion.anios}}</p>
-                            <p class="descrip">{{educacion.titulo}}</p>
+                            <p class="descrip">{{educacion.descrip}}</p>
                             <hr>
                         </div>
                         <div class="col-3 align-self-center text-end crud" *ngIf="verBt"   >
