Botones de edición funcionando correctamente en desarrollos

--- a/src/app/componentes/acerca/acerca.component.html
+++ b/src/app/componentes/acerca/acerca.component.html
@@ -3,7 +3,7 @@
         <div class="row mx-3">
             <div class="align-self-center">
                 <div class="foto">
-                    <img src="./assets/Img/ru.jpg" alt="Ruben Peña" width="115">
+                    <img src="./assets/Img/ru.jpg" alt="Imagen de Ruben Peña" width="115">
                 </div>
                 <div class="row">
                     <div class="col-12">
