--- a/src/app/componentes/encabezado/encabezado.component.html
+++ b/src/app/componentes/encabezado/encabezado.component.html
@@ -13,7 +13,7 @@
 
                 </div>
                 <div class="login col-sm-2 col-6 align-self-center text-sm-end">
-                    <button type="button" class="btn btn-outline-light my-5" (click)="loguearse()">Login</button>
+                    <button type="button" class="btn btn-outline-light my-5" (click)="loguearse()">{{txBoton}}</button>
                 </div>
 
             </div>
