--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -1,10 +1,10 @@
 <section class="skills">
     <div class="container caja">
-        <div class="row justify-content-around">
-            <div class="col-9 tit">
+        <div class="row">
+            <div class="col-11 tit">
                 <H4>Hard and soft skills</H4>
             </div>
-            <div class="col-1 align-self-center text-center crud" *ngIf="verBt"  >
+            <div class="col-1 align-self-center text-center crud" *ngIf="verBt">
                 <a (click)="agregarElemento()"><i class="bi bi-plus-square"></i></a>
             </div>
         </div>
