--- a/src/app/componentes/desarrollos/desarrollos.component.html
+++ b/src/app/componentes/desarrollos/desarrollos.component.html
@@ -1,32 +1,39 @@
 <section class="desar">
     <div class="container caja">
-        <div class="row justify-content-around">
-            <div class="col-9 tit">
+        <div class="row">
+            <div class="col-11 tit">
                 <H4>Desarrollos</H4>
             </div>
-            <div class="col-3 align-self-center text-end crud" *ngIf="verBt">
+            <!--Si hay que mostrar el boton para agregar--->
+            <div class="col-1 align-self-center text-center crud" *ngIf="verBt">
+                 <!--Si se hizo click en el boton agregar se llama a agregarElemento()--->
                 <a (click)="agregarElemento()"><i class="bi bi-plus-square"></i></a>
             </div>
         </div>
+         <!--ngIf Si hay que mostrar el formulario para agregar un post--->
+          <!--Si se hizo click en aceptar o cancelar del formulario se llama a editItemFin--->
         <app-desa-form *ngIf="addFormu" (resultadoEvent)="editItemFin($event)" [textos]="textosEditar"></app-desa-form>
-        <!----------------un desarrollo------------------>
+        <!--Lista por cada desarrollo en la coleccion traida por el servicio------>
         <li *ngFor="let undesa of misDesa; let indice=index">
             
             <div class="post">
                 <div class="contenedor">
                     <div class="row">
+                         <!--Si hay que mostrar el formulario para modificar un post se coloca encima--->
+                          <!--Si se hizo click en aceptar o cancelar del formulario se llama a editItemFin--->
                         <app-desa-form *ngIf="editFormu && indiceEdit==indice"
                             (resultadoEvent)="editItemFin($event)" [textos]="textosEditar"></app-desa-form>
                         <div class="thumber col-12 col-xl-3">
-                            <a><img src={{undesa.foto}} alt="Sin magen de {{undesa.titulo}}" /></a>
+                          <a><img src={{undesa.foto}} alt="Sin magen de {{undesa.titulo}}" /></a> 
                         </div>
                         <div class="col-9 col-xl-6 info">
-                            <p class="h2 mt-3 titulo">           <!--  <p class="h2 mt-3 titulo">{{undesa.titulo}}</p> --> 
+                            <p class="h2 mt-3 titulo">      
                             <a href={{undesa.link}} target="_blank"> {{undesa.titulo}} </a>
                             </p>
                             <p class="extracto">{{undesa.descrip}}</p>
                             
                         </div>
+                        <!--Si hay que mostrar el boton para modificar o borrar--->
                         <div class="col-3 col-xl-2 align-self-center text-end crud" *ngIf="verBt">
                             <a (click)="editarElemento(indice)"><i class="bi bi-pencil"></i></a>
                             <a (click)="borrarElemento(indice)"><i class="bi bi-trash3"></i></a>
