Otros retoques antes de eliminar persona service sin uso

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -11,3 +11,5 @@
 <app-skills></app-skills>
 <!---------------------- #Desarrollos ----------------------------------->
 <app-desarrollos></app-desarrollos>
+<!---------------------- #Pie de página ----------------------------------->
+<app-foot></app-foot>
