--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -37,6 +37,7 @@
             </div>
             <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
               <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                <h2 class="mb-4">Ruben Peña</h2>
                 <h4 class="mb-4">Porfolio personal</h4>
                 <p class="small mb-0">Debe loguearse para editar, modificar o eliminar datos de este porfolio.</p>
               </div>
