--- a/src/app/componentes/desarrollos/desarrollos.component.html
+++ b/src/app/componentes/desarrollos/desarrollos.component.html
@@ -1,4 +1,4 @@
-<section class="desar">
+<section class="desar" id="desa">
     <div class="container caja">
         <div class="row">
             <div class="col-11 tit">
