Retoque en el responsive. se cambia container por container-xl

--- a/src/app/componentes/desarrollos/desarrollos.component.html
+++ b/src/app/componentes/desarrollos/desarrollos.component.html
@@ -1,5 +1,5 @@
 <section class="desar" id="desa">
-    <div class="container caja">
+    <div class="container-xl caja">
         <div class="row">
             <div class="col-11 tit">
                 <H4>Desarrollos</H4>
