--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -1,6 +1,6 @@
 
     <section class="educa">
-        <div class="container caja">
+        <div class="container-xl caja">
             <div class="row">
                 <div class="col-11 tit">
                     <H4>Educación</H4>
