--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -1,5 +1,5 @@
 <section class="expe">
-    <div class="container caja">
+    <div class="container-xl caja">
         <div class="row">
             <div class="col-11 tit">
                 <H4>Experiencia</H4>
