--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -1,5 +1,5 @@
 <section class="skills">
-    <div class="container caja">
+    <div class="container-xl caja">
         <div class="row">
             <div class="col-11 tit">
                 <H4>Hard and soft skills</H4>
