--- a/src/app/componentes/acerca/acerca.component.html
+++ b/src/app/componentes/acerca/acerca.component.html
@@ -1,5 +1,5 @@
 <section class="main">
-    <div class="container">
+    <div class="container-xl">
         <div class="row mx-3">
             <div class="align-self-center">
                 <div class="foto">
