--- a/src/app/componentes/foot/foot.component.html
+++ b/src/app/componentes/foot/foot.component.html
@@ -1,6 +1,6 @@
 <footer class="p-3 text-bg-dark">
     <nav class=".navbar-brand">
-        <div class="container">
+        <div class="container-xl">
             <div class="row ">
                 <div class="logo col-6 align-self-center text-center">
                     <a href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa" target="_blank">
